# rustiotresearchproject

./: README.md
co2device/: Cargo.toml
co2device/src/: main.rs
docs/: researchprojectfinal.fzz
installinstructions/: Cargo.toml
lib_caleb/: readme.md
lib_caleb/amqpiothubv2/: Cargo.toml
lib_caleb/amqpiothubv2/src/: amqp.rs  lib.rs  util.rs
lib_caleb/azureblobmanager/: Cargo.toml
lib_caleb/azureblobmanager/src/: lib.rs
lib_caleb/cs811lib/: Cargo.toml
lib_caleb/cs811lib/src/: c_device.rs  c_enums.rs  lib.rs
lib_caleb/templib/: Cargo.toml
lib_caleb/templib/src/: c_device.rs  c_enums.rs  lib.rs
tempdevice/: Cargo.toml
tempdevice/src/: main.rs
web/: Cargo.toml  Rocket.toml
web/scripts/: actions.js  charts.js  raspberrypi1.js  raspberrypi2.js
web/src/: main.rs
web/templates/: actions.html.tera  documentation.html.tera  index.html.tera  raspberrypi1.html.tera  raspberrypi2.html.tera  status.html.tera  summary.html.tera
web/templates/partials/: footer.html.tera  header.html.tera  nav.html.tera
