[package]
name = "co2device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.78"
rppal = "0.13.1"

[dependencies.amqpiothubv2]
path = "../lib_caleb/amqpiothubv2"
version = "0.1.1"

[dependencies.cs811lib]
path = "../lib_caleb/cs811lib"
version = "0.1.0"