[package]
name = "tempdevice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.78"
rppal = "0.13.1"

[dependencies.amqpiothubv2]
path = "../lib_caleb/amqpiothubv2"
version = "0.1.1"

[dependencies.templib]
path = "../lib_caleb/templib"
version = "0.1.0"
