[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Roelens"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.78"
rocket = "0.5.0-rc.1"
ping = "0.4.0"
rand = "0.8.4"
chrono = "0.4.19"


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.azureblobmanager]
path = "../lib_caleb/azureblobmanager"
version = "0.1.0"

[dependencies.amqpiothubv2]
path = "../lib_caleb/amqpiothubv2"
version = "0.1.1"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]