[package]
name = "amqpiothubv2"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Sas token generator dependencies
env_logger = "0.9.0"
log = "0.4.14"
serde_urlencoded = "0.7.1"
serde_json = "1.0.75"
chrono = "0.4.19"
hmac = "0.11.0"     # v12 is imcompatible
sha2 = "0.9.0"      # v10 is imcompatible
base64 = "0.13.0"   # v14+ contains removed features
async-trait = "0.1.52"
form_urlencoded = "1.0.1"
enum_dispatch = "0.3.7"

# Amqp communication dependencies
rustls = "0.19.1"
futures = "0.3"
async-std = "1.10.0"
urlencoding = "1.3.3"
rand = "0.8.4"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.ntex-amqp]
version = "0.4.5"
git = "https://github.com/BrightOpen/ntex-amqp"
branch = "master"

[dependencies.ntex]
version = "0.3.18"
features = ["rustls"]
git = "https://github.com/BrightOpen/ntex"
branch = "master"


# Sas token generator dependency
[dependencies.serde]
version = "1.0.133"
features = ["derive"]