[package]
name = "azureblobmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_sdk_storage_blob = "0.45.3"
azure_sdk_storage_core = "0.44.4"
azure_sdk_storage_account = "0.41.3"
futures = "0.3.19"
serde_json = "1.0.75"
chrono = "0.4.19"
serde = "1.0.133"
base64 = "0.20.0-alpha.1"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.azure_storage_blobs]
version = "0.1.0"
git = "https://github.com/Azure/azure-sdk-for-rust"


[dependencies.azure_core]
version = "0.1.0"
git = "https://github.com/Azure/azure-sdk-for-rust"

[dependencies.azure_storage]
version = "0.1.0"
git = "https://github.com/Azure/azure-sdk-for-rust"
default-features = false
features = ["enable_reqwest_rustls", "account"]
